--- a/FL11_HW4/homework/index.html
+++ b/FL11_HW4/homework/index.html
@@ -44,7 +44,7 @@
         </p>
     </div>
 </div>
-<div class="feature-articles">
+<section class="feature-articles">
     <h3>Read of some our <strong>featured articles</strong></h3>
     <div class="article image-left">
         <div class="image">
@@ -108,7 +108,7 @@
             </p>
         </div>
     </div>
-</div>
+</section>
 <div class="news">
     <div class="item">
         <img src="img/news-list-1.jpg" alt="">
