add font in html

--- a/FL11_HW4/homework/index.html
+++ b/FL11_HW4/homework/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FL11_HW4 - Artem Ostavnenko</title>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -138,7 +139,6 @@
         <a href="#" class="load">Load news</a>
     </div>
 </div>
-
 <div class="subscribe">
     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
