Like block color

--- a/FL11_HW4/homework/index.html
+++ b/FL11_HW4/homework/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="left">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque
+            Lorem ipsum dolor sit amet, consectetur <string>adipisicing elit.</string> Atque
             fugit nemo neque nobis soluta unde.
         </p>
     </div>
