--- a/FL11_HW4/homework/index.html
+++ b/FL11_HW4/homework/index.html
@@ -12,8 +12,8 @@
         Lorem & ipsum
     </a>
     <nav>
-        <a href="">Login</a>
-        <a href="">Signup</a>
+        <a href="#">Login</a>
+        <a href="#">Signup</a>
     </nav>
 </header>
 <div class="banner">
