headings and additional breakpoint

--- a/FL11_HW5/homework/index.html
+++ b/FL11_HW5/homework/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="copy">
                 <h2>
-                    Lorem ipsum dolor.
+                    My responsive template
                 </h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
@@ -56,7 +56,7 @@
             </div>
             <div class="copy">
                 <h2>
-                    Lorem ipsum dolor.
+                    Amazing travel blog
                 </h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
@@ -76,7 +76,7 @@
             </div>
             <div class="copy">
                 <h2>
-                    Lorem ipsum dolor.
+                    Nice minimalist travel
                 </h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
@@ -96,7 +96,7 @@
             </div>
             <div class="copy">
                 <h2>
-                    Lorem ipsum dolor.
+                    With amazing regions
                 </h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
@@ -113,7 +113,7 @@
         <div class="post post-5 without-image">
             <div class="copy">
                 <h2>
-                    Lorem ipsum dolor.
+                    And again - it's totally amazing
                 </h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
@@ -135,7 +135,7 @@
             </div>
             <div class="copy">
                 <h4>
-                    Lorem ipsum dolor sit amet.
+                    This is the first news on blog
                 </h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -150,7 +150,7 @@
             </div>
             <div class="copy">
                 <h4>
-                    Lorem ipsum dolor sit amet.
+                    Second news on the Travel blog
                 </h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -165,18 +165,18 @@
 <footer class="footer">
     <div class="copy">
         <p>
-            Lorem ipsum dolor sit amet.
+            Copyright 2018, Epam systems
         </p>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut.
         </p>
     </div>
     <div class="copyright">
         <p>
-            Lorem ipsum dolor.
+            Design and coding by
         </p>
         <p>
-            Lorem ipsum.
+            Artem Ostavnenko
         </p>
     </div>
 
