fix validator error. Add small placeholder

--- a/FL11_HW14/homework/app/index.html
+++ b/FL11_HW14/homework/app/index.html
@@ -504,7 +504,9 @@
 										sizes="(max-width: 767px) 100vw, 100vw"
 										data-src="img/blog-image1.jpg"
 										data-srcset="img/m-blog-image1.jpg 320w, img/blog-image1.jpg 942w"
+										srcset="img/img-placeholder.jpg 320w, img/img-placeholder.jpg 942w"
 										data-sizes="100w"
+										src="img/img-placeholder.jpg"
 										alt="Blog Image">
 						</a>
 					</div>
@@ -538,9 +540,11 @@
 						<a href="#">
 							<img  class="img-responsive lazy"
 										data-srcset="img/m-blog-image2.jpg 320w, img/blog-image2.jpg 942w"
+										srcset="img/img-placeholder.jpg 320w, img/img-placeholder.jpg 942w"
 										sizes="(max-width: 767px) 100vw, 100vw"
 										data-src="img/blog-image2.jpg"
 										data-sizes="100w"
+										src="img/img-placeholder.jpg"
 										alt="Blog Image">
 						</a>
 					</div>
@@ -574,9 +578,11 @@
 						<a href="#">
 							<img  class="img-responsive lazy"
 										data-srcset="img/m-blog-image3.jpg 320w, img/blog-image3.jpg 942w"
+										srcset="img/img-placeholder.jpg 320w, img/img-placeholder.jpg 942w"
 										sizes="(max-width: 767px) 100vw, 100vw"
 										data-src="img/blog-image3.jpg"
 										data-sizes="100w"
+										src="img/img-placeholder.jpg"
 										alt="Blog Image">
 						</a>
 					</div>
@@ -610,9 +616,11 @@
 						<a href="#">
 							<img  class="img-responsive lazy"
 										data-srcset="img/m-blog-image4.jpg 320w, img/blog-image4.jpg 942w"
+										srcset="img/img-placeholder.jpg 320w, img/img-placeholder.jpg 942w"
 										sizes="(max-width: 767px) 100vw, 100vw"
 										data-src="img/blog-image4.jpg"
 										data-sizes="100w"
+										src="img/img-placeholder.jpg"
 										alt="Blog Image">
 						</a>
 					</div>
@@ -646,9 +654,11 @@
 						<a href="#">
 							<img  class="img-responsive lazy"
 										data-srcset="img/m-blog-image5.jpg 320w, img/blog-image5.jpg 942w"
+										srcset="img/img-placeholder.jpg 320w, img/img-placeholder.jpg 942w"
 										sizes="(max-width: 767px) 100vw, 100vw"
 										data-src="img/blog-image5.jpg"
 										data-sizes="100w"
+										src="img/img-placeholder.jpg"
 										alt="Blog Image">
 						</a>
 					</div>
